feat: update index.html

--- a/plants/index.html
+++ b/plants/index.html
@@ -26,27 +26,89 @@
     <main>
         <section class="welcome">
             <div class="wrapper">
-
+                <div class="welcome__content">
+                    <h1 class="welcome__title">We grow <span class="text-selection">plants</span> and give you oxygen</h1>
+                    <p class="welcome_text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    </p>
+                    <button class="button">LEARN MORE</button>
+                </div>
+                <img src="" class="welcome__image" alt="Leafs">
             </div>
         </section>
         <section class="about">
             <div class="wrapper">
-
+                <div class="about__content">
+                    <h2 class="about__title">We are <span class="text-selection">professional experienced</span> gardeners</h2>
+                    <p class="about_text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    </p>
+                </div>
+                <img src="" class="welcome__image" alt="Houseplant">
             </div>
         </section>
         <section class="service">
             <div class="wrapper">
-
+                <div class="service__header">
+                    <h2 class="service__title">Service and our projects</h2>
+                    <div class="service__buttons">
+                        <button class="button service__button">Gardens</button>
+                        <button class="button service__button">Lawn</button>
+                        <button class="button service__button">Planting</button>
+                    </div>
+                </div>
+                <div class="services">
+                    <div class="service__item">
+                        <img src="" class="service__image" alt="Garden care">
+                        <h4 class="service__name">Garden care</h4>
+                        <p class="service__text">Lorem Ipsum has been the industry</p>
+                    </div>
+                    <div class="service__item">
+                        <img src="" class="service__image" alt="Planting">
+                        <h4 class="service__name">Planting</h4>
+                        <p class="service__text">Lorem Ipsum has been the industry</p>
+                    </div>
+                    <div class="service__item">
+                        <img src="" class="service__image" alt="Lawn care">
+                        <h4 class="service__name">Lawn care</h4>
+                        <p class="service__text">Lorem Ipsum has been the industry</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="prices">
             <div class="wrapper">
-
+                <div class="section__prices">
+                    <h3 class="price__title">Prices</h3>
+                    <div class="prices__items">
+                        <div class="price__item">
+                            <span class="item__name">Basics</span>
+                            <span class="ico-arrow"></span>
+                        </div>
+                        <div class="price__item">
+                            <span class="item__name">Standard</span>
+                            <span class="ico-arrow"></span>
+                        </div>
+                        <div class="price__item">
+                            <span class="item__name">Pro care</span>
+                            <span class="ico-arrow"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="section__call-us">
+                    <h3 class="call-us__title">Our best <span class="text-selection">gardeners</span> are ready to help you</h3>
+                    <button class="button">Contact us</button>
+                    <img src="" class="call-us__image" alt="Leafs">
+                </div>
             </div>
         </section>
         <section class="contacts">
             <div class="wrapper">
-
+                <h3 class="contacts__title">Contact us</h3>
+                <div class="contacts__container">
+                    <span class="adress__name">City</span>
+                    <span class="ico-arrow"></span>
+                </div>
             </div>
         </section>
     </main>
