--- a/plants/index.html
+++ b/plants/index.html
@@ -27,8 +27,8 @@
         <section class="welcome">
             <div class="wrapper">
                 <div class="welcome__content">
-                    <h1 class="welcome__title">We grow <span class="text-selection">plants</span> and give you oxygen</h1>
-                    <p class="welcome_text">
+                    <h1 class="welcome__title">We grow <span class="text-selection_green">plants</span> and give you oxygen</h1>
+                    <p class="welcome__text">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
                     </p>
                     <button class="button">LEARN MORE</button>
@@ -39,7 +39,7 @@
         <section class="about">
             <div class="wrapper">
                 <div class="about__content">
-                    <h2 class="about__title">We are <span class="text-selection">professional experienced</span> gardeners</h2>
+                    <h2 class="about__title">We are <span class="text-selection_orange">professional experienced</span> gardeners</h2>
                     <p class="about_text">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </p>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="section__call-us">
-                    <h3 class="call-us__title">Our best <span class="text-selection">gardeners</span> are ready to help you</h3>
+                    <h3 class="call-us__title">Our best <span class="call-us__title_selection_green">gardeners</span> are ready to help you</h3>
                     <button class="button">Contact us</button>
                     <img src="" class="call-us__image" alt="Leafs">
                 </div>
