feat: connect image in index.html

--- a/plants/index.html
+++ b/plants/index.html
@@ -10,7 +10,10 @@
     <header class="header">
         <div class="wrapper">
             <div class="wrapper__logo">
-                <a href="#" class="logo"></a>
+                <a href="#" class="logo">
+                    <img src="./assets/icons/logo.svg" class="logo__image" alt="Logo">
+                    <span class="text__logo">Plants</span>
+                </a>
             </div>
             <nav class="header__navigation">
                 <ul class="navigation-list">
@@ -33,7 +36,7 @@
                     </p>
                     <button class="button">LEARN MORE</button>
                 </div>
-                <img src="" class="welcome__image" alt="Leafs">
+                <img src="./assets/images/leafs.png" class="welcome__image" alt="Leafs">
             </div>
         </section>
         <section class="about">
@@ -44,7 +47,7 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </p>
                 </div>
-                <img src="" class="welcome__image" alt="Houseplant">
+                <img src="./assets/images/houseplant.png" class="about__image" alt="Houseplant">
             </div>
         </section>
         <section class="service">
@@ -59,17 +62,17 @@
                 </div>
                 <div class="services">
                     <div class="service__item">
-                        <img src="" class="service__image" alt="Garden care">
+                        <img src="./assets/images/garden_care_1.jpg" class="service__image" alt="Garden care">
                         <h4 class="service__name">Garden care</h4>
                         <p class="service__text">Lorem Ipsum has been the industry</p>
                     </div>
                     <div class="service__item">
-                        <img src="" class="service__image" alt="Planting">
+                        <img src="./assets/images/planting_1.jpg" class="service__image" alt="Planting">
                         <h4 class="service__name">Planting</h4>
                         <p class="service__text">Lorem Ipsum has been the industry</p>
                     </div>
                     <div class="service__item">
-                        <img src="" class="service__image" alt="Lawn care">
+                        <img src="./assets/images/lawn_care_1.jpg" class="service__image" alt="Lawn care">
                         <h4 class="service__name">Lawn care</h4>
                         <p class="service__text">Lorem Ipsum has been the industry</p>
                     </div>
@@ -98,7 +101,7 @@
                 <div class="section__call-us">
                     <h3 class="call-us__title">Our best <span class="call-us__title_selection_green">gardeners</span> are ready to help you</h3>
                     <button class="button">Contact us</button>
-                    <img src="" class="call-us__image" alt="Leafs">
+                    <img src="./assets/images/leafs_small.png" class="call-us__image" alt="Leafs">
                 </div>
             </div>
         </section>
@@ -115,7 +118,7 @@
     <footer class="footer">
         <div class="wrapper">
             <div class="footer__copyright">
-                <img src="" alt="copyright">
+                <img src="./assets/icons/copyright.svg" alt="copyright">
                 <span>2022</span>
                 <span>github</span>
             </div>
@@ -124,7 +127,18 @@
             </div>
             <div class="footer__social-media">
                 <div class="footer__ico-social">
-                    <a href="" class="footer__social-link"></a>
+                    <a href="#" class="footer__social-link">
+                        <img src="./assets/icons/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="#" class="footer__social-link">
+                        <img src="./assets/icons/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="#" class="footer__social-link">
+                        <img src="./assets/icons/twitter.svg" alt="Twitter">
+                    </a>
+                    <a href="#" class="footer__social-link">
+                        <img src="./assets/icons/pinterest.svg" alt="Pinterest">
+                    </a>
                 </div>
             </div>
         </div>
