--- a/plants/index.html
+++ b/plants/index.html
@@ -44,10 +44,10 @@
             </div>
         </section>
         <section class="about">
-            <div class="wrapper">
+            <div class="wrapper wrapper__about">
                 <div class="about__content">
                     <h2 class="about__title">We are <span class="text-selection_orange">professional experienced</span> gardeners</h2>
-                    <p class="about_text">
+                    <p class="about__text">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </p>
                 </div>
