--- a/plants/index.html
+++ b/plants/index.html
@@ -38,7 +38,7 @@
                     <p class="welcome__text">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
                     </p>
-                    <button class="button">LEARN MORE</button>
+                    <button class="button button__welcome">LEARN MORE</button>
                 </div>
                 <!--<img src="./assets/images/leafs.png" class="welcome__image" alt="Leafs">-->
             </div>
@@ -55,7 +55,7 @@
             </div>
         </section>
         <section class="service">
-            <div class="wrapper">
+            <div class="wrapper wrapper__service">
                 <div class="service__header">
                     <h2 class="service__title">Service and our projects</h2>
                     <div class="service__buttons">
@@ -67,18 +67,45 @@
                 <div class="services">
                     <div class="service__item">
                         <img src="./assets/images/garden_care_1.jpg" class="service__image" alt="Garden care">
-                        <h4 class="service__name">Garden care</h4>
-                        <p class="service__text">Lorem Ipsum has been the industry</p>
+                        <div class="service_descr">
+                            <h4 class="service__name">Garden care</h4>
+                            <p class="service__text">Lorem Ipsum has been the industry</p>
+                        </div>
                     </div>
                     <div class="service__item">
                         <img src="./assets/images/planting_1.jpg" class="service__image" alt="Planting">
-                        <h4 class="service__name">Planting</h4>
-                        <p class="service__text">Lorem Ipsum has been the industry</p>
+                        <div class="service_descr">
+                            <h4 class="service__name">Planting</h4>
+                            <p class="service__text">Lorem Ipsum has been the industry</p>
+                        </div>
                     </div>
                     <div class="service__item">
                         <img src="./assets/images/lawn_care_1.jpg" class="service__image" alt="Lawn care">
-                        <h4 class="service__name">Lawn care</h4>
-                        <p class="service__text">Lorem Ipsum has been the industry</p>
+                        <div class="service_descr">
+                            <h4 class="service__name">Lawn care</h4>
+                            <p class="service__text">Lorem Ipsum has been the industry</p>
+                        </div>
+                    </div>
+                    <div class="service__item">
+                        <img src="./assets/images/planting_2.jpg" class="service__image" alt="Planting">
+                        <div class="service_descr">
+                            <h4 class="service__name">Planting</h4>
+                            <p class="service__text">Lorem Ipsum has been the industry</p>
+                        </div>
+                    </div>
+                    <div class="service__item">
+                        <img src="./assets/images/garden_care_2.jpg" class="service__image" alt="Garden care">
+                        <div class="service_descr">
+                            <h4 class="service__name">Garden care</h4>
+                            <p class="service__text">Lorem Ipsum has been the industry</p>
+                        </div>
+                    </div>
+                    <div class="service__item">
+                        <img src="./assets/images/planting_3.jpg" class="service__image" alt="Planting">
+                        <div class="service_descr">
+                            <h4 class="service__name">Planting</h4>
+                            <p class="service__text">Lorem Ipsum has been the industry</p>
+                        </div>
                     </div>
                 </div>
             </div>
