feat: implement layout prices, contacts, footer

--- a/plants/index.html
+++ b/plants/index.html
@@ -111,33 +111,42 @@
             </div>
         </section>
         <section class="prices">
-            <div class="wrapper">
+            <div class="wrapper wrapper__prices">
                 <div class="section__prices">
                     <h3 class="price__title">Prices</h3>
                     <div class="prices__items">
-                        <div class="price__item">
-                            <span class="item__name">Basics</span>
-                            <span class="ico-arrow"></span>
-                        </div>
-                        <div class="price__item">
+                        <!-- <details>
+                            <summary>Basics</summary>
+                        </details> -->
+                        <button class="button button__price">
+                            <span>Basics</span>
+                            <div class="ico">
+                                <div class="ico-arrow arrow-bottom"></div>
+                            </div>
+                        </button>
+                        <button class="button button__price">
                             <span class="item__name">Standard</span>
-                            <span class="ico-arrow"></span>
-                        </div>
-                        <div class="price__item">
-                            <span class="item__name">Pro care</span>
-                            <span class="ico-arrow"></span>
-                        </div>
+                            <div class="ico">
+                                <div class="ico-arrow arrow-bottom"></div>
+                            </div>
+                        </button>
+                        <button class="button button__price">
+                            <span>Pro care</span>
+                            <div class="ico">
+                                <div class="ico-arrow arrow-bottom"></div>
+                            </div>
+                        </button>
                     </div>
                 </div>
                 <div class="section__call-us">
-                    <h3 class="call-us__title">Our best <span class="call-us__title_selection_green">gardeners</span> are ready to help you</h3>
-                    <button class="button">Contact us</button>
+                    <h3 class="call-us__title">Our best <span class="title_selection_green">gardeners</span> are ready to help you</h3>
+                    <button class="button button__call-us">Contact us</button>
                     <img src="./assets/images/leafs_small.png" class="call-us__image" alt="Leafs">
                 </div>
             </div>
         </section>
         <section class="contacts">
-            <div class="wrapper">
+            <div class="wrapper wrapper__contacts">
                 <h2 class="contacts__title">Contact us</h2>
                 <div class="contacts__container">
                     <span class="adress__name">City</span>
@@ -147,30 +156,28 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="wrapper">
-            <div class="footer__copyright">
+        <div class="wrapper wrapper__footer">
+            <div class="footer-copyright">
                 <img src="./assets/icons/copyright.svg" alt="copyright">
                 <span>2022</span>
                 <span>github</span>
             </div>
-            <div class="footer__copyright">
+            <div class="footer-rss">
                 <span>Rolling Scopes School</span>
             </div>
-            <div class="footer__social-media">
-                <div class="footer__ico-social">
-                    <a href="#" class="footer__social-link">
-                        <img src="./assets/icons/instagram.svg" alt="Instagram">
-                    </a>
-                    <a href="#" class="footer__social-link">
-                        <img src="./assets/icons/facebook.svg" alt="Facebook">
-                    </a>
-                    <a href="#" class="footer__social-link">
-                        <img src="./assets/icons/twitter.svg" alt="Twitter">
-                    </a>
-                    <a href="#" class="footer__social-link">
-                        <img src="./assets/icons/pinterest.svg" alt="Pinterest">
-                    </a>
-                </div>
+            <div class="footer-social">
+                <a href="#" class="footer__social-link">
+                    <img src="./assets/icons/instagram.svg" alt="Instagram">
+                </a>
+                <a href="#" class="footer__social-link">
+                    <img src="./assets/icons/facebook.svg" alt="Facebook">
+                </a>
+                <a href="#" class="footer__social-link">
+                    <img src="./assets/icons/twitter.svg" alt="Twitter">
+                </a>
+                <a href="#" class="footer__social-link">
+                    <img src="./assets/icons/pinterest.svg" alt="Pinterest">
+                </a>
             </div>
         </div>
     </footer>
