--- a/plants/index.html
+++ b/plants/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/style.css">
     <link rel="icon" href="./favicon.ico">
+    <script src="./index.js"></script>
     <title>Plants</title>
 </head>
 <body>
