fix: fix bugs w3c

--- a/plants/index.html
+++ b/plants/index.html
@@ -115,21 +115,21 @@
                     <div class="prices__items">
                         <button class="button prices__btn">
                             <span class="item__name">Basics</span>
-                            <div class="ico">
-                                <div class="ico-arrow_grey"></div>
-                            </div>
+                            <span class="ico">
+                                <span class="ico-arrow_grey"></span>
+                            </span>
                         </button>
                         <button class="button prices__btn">
                             <span class="item__name">Standard</span>
-                            <div class="ico">
-                                <div class="ico-arrow_grey"></div>
-                            </div>
+                            <span class="ico">
+                                <span class="ico-arrow_grey"></span>
+                            </span>
                         </button>
                         <button class="button prices__btn">
                             <span class="item__name">Pro care</span>
-                            <div class="ico">
-                                <div class="ico-arrow_grey"></div>
-                            </div>
+                            <span class="ico">
+                                <span class="ico-arrow_grey"></span>
+                            </span>
                         </button>
                     </div>
                 </div>
@@ -145,9 +145,9 @@
                 <div class="addresses__wrapper">
                     <button class="button addresses__btn">
                         <span>City</span>
-                        <div class="ico ico_opened">
-                            <div class="ico-arrow_white"></div>
-                        </div>
+                        <span class="ico ico_opened">
+                            <span class="ico-arrow_white"></span>
+                        </span>
                     </button>
                     <!-- <select name="select" class="select">
                         <option value="value1" selected >City</option>
@@ -161,7 +161,7 @@
     <footer class="footer">
         <div class="wrapper footer__wrapper">
             <div class="footer-copyright">
-                <span>&copy</span>
+                <span>&copy;</span>
                 <span>2022</span>
                 <span><a href="https://github.com/AciaKr/" class="footer__link">github</a></span>
             </div>
