--- a/plants/index.html
+++ b/plants/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="./favicon.ico">
     <script src="./index.js"></script>
     <title>Plants</title>
+    <meta name="description" content="Plants: We grow plants and give you oxygen and professional experienced gardeners">
 </head>
 <body>
     <header class="header">
@@ -39,7 +40,7 @@
                     <h1 class="welcome__title">We grow <span class="text-selection_green">plants</span> and give you oxygen</h1>
                     <p class="welcome__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
                     </p>
-                    <button class="button welcome__btn">LEARN MORE</button>
+                    <button class="button welcome__btn" onclick="document.location='#about-us'">LEARN MORE</button>
                 </div>
             </div>
         </section>
@@ -66,42 +67,42 @@
                     <div class="service__item">
                         <img src="./assets/images/garden_care_1.jpg" class="service__image" alt="Garden care">
                         <div class="service_descr">
-                            <h4 class="service__name">Garden care</h4>
+                            <h3 class="service__name">Garden care</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
                         <img src="./assets/images/planting_1.jpg" class="service__image" alt="Planting">
                         <div class="service_descr">
-                            <h4 class="service__name">Planting</h4>
+                            <h3 class="service__name">Planting</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
                         <img src="./assets/images/lawn_care_1.jpg" class="service__image" alt="Lawn care">
                         <div class="service_descr">
-                            <h4 class="service__name">Lawn care</h4>
+                            <h3 class="service__name">Lawn care</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
                         <img src="./assets/images/planting_2.jpg" class="service__image" alt="Planting">
                         <div class="service_descr">
-                            <h4 class="service__name">Planting</h4>
+                            <h3 class="service__name">Planting</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
                         <img src="./assets/images/garden_care_2.jpg" class="service__image" alt="Garden care">
                         <div class="service_descr">
-                            <h4 class="service__name">Garden care</h4>
+                            <h3 class="service__name">Garden care</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
                         <img src="./assets/images/planting_3.jpg" class="service__image" alt="Planting">
                         <div class="service_descr">
-                            <h4 class="service__name">Planting</h4>
+                            <h3 class="service__name">Planting</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
@@ -116,26 +117,26 @@
                         <button class="button prices__btn">
                             <span class="item__name">Basics</span>
                             <span class="ico">
-                                <span class="ico-arrow_grey"></span>
+                                <span class="ico-arrow_inactive"></span>
                             </span>
                         </button>
                         <button class="button prices__btn">
                             <span class="item__name">Standard</span>
                             <span class="ico">
-                                <span class="ico-arrow_grey"></span>
+                                <span class="ico-arrow_inactive"></span>
                             </span>
                         </button>
                         <button class="button prices__btn">
                             <span class="item__name">Pro care</span>
                             <span class="ico">
-                                <span class="ico-arrow_grey"></span>
+                                <span class="ico-arrow_inactive"></span>
                             </span>
                         </button>
                     </div>
                 </div>
                 <div class="call-us">
-                    <h3 class="call-us__title">Our best <span class="title_selection_green">gardeners</span> are ready to help you</h3>
-                    <button class="button call-us__btn">Contact us</button>
+                    <div class="call-us__text">Our best <span class="text-selection_green">gardeners</span> are ready to help you</div>
+                    <button class="button call-us__btn" onclick="document.location='#contacts'">Contact us</button>
                 </div>
             </div>
         </section>
@@ -145,8 +146,8 @@
                 <div class="addresses__wrapper">
                     <button class="button addresses__btn">
                         <span>City</span>
-                        <span class="ico ico_opened">
-                            <span class="ico-arrow_white"></span>
+                        <span class="ico ico_active">
+                            <span class="ico-arrow_active"></span>
                         </span>
                     </button>
                     <!-- <select name="select" class="select">
