feat: realese adaptive version

--- a/plants/index.html
+++ b/plants/index.html
@@ -31,11 +31,15 @@
                     <li><a href="#contacts" class="nav__link">Contacts</a></li>
                 </ul>
             </nav>
+            <div class="hamburger">
+                <span class="hamburger__line"></span>
+            </div>
         </div>
     </header>
     <main>
         <section class="welcome" id="welcome">
             <div class="wrapper welcome__wrapper">
+                <div class="welcome__image"></div>
                 <div class="welcome__content">
                     <h1 class="welcome__title">We grow <span class="text-selection_green">plants</span> and give you oxygen</h1>
                     <p class="welcome__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
@@ -51,6 +55,7 @@
                     <p class="about__text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </p>
                 </div>
+                <img src="./assets/images/houseplant.png" alt="houseplant" class="about__image">
             </div>
         </section>
         <section class="service" id="service">
@@ -65,42 +70,54 @@
                 </div>
                 <div class="service__items">
                     <div class="service__item">
-                        <img src="./assets/images/garden_care_1.jpg" class="service__image" alt="Garden care">
+                        <div class="service__image-box">
+                            <img src="./assets/images/garden_care_1.jpg" class="service__image" alt="Garden care">
+                        </div>
                         <div class="service_descr">
                             <h3 class="service__name">Garden care</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
-                        <img src="./assets/images/planting_1.jpg" class="service__image" alt="Planting">
+                        <div class="service__image-box">
+                            <img src="./assets/images/planting_1.jpg" class="service__image" alt="Planting">
+                        </div>
                         <div class="service_descr">
                             <h3 class="service__name">Planting</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
-                        <img src="./assets/images/lawn_care_1.jpg" class="service__image" alt="Lawn care">
+                        <div class="service__image-box">
+                            <img src="./assets/images/lawn_care_1.jpg" class="service__image" alt="Lawn care">
+                        </div>
                         <div class="service_descr">
                             <h3 class="service__name">Lawn care</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
-                        <img src="./assets/images/planting_2.jpg" class="service__image" alt="Planting">
+                        <div class="service__image-box">
+                            <img src="./assets/images/planting_2.jpg" class="service__image" alt="Planting">
+                        </div>
                         <div class="service_descr">
                             <h3 class="service__name">Planting</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
-                        <img src="./assets/images/garden_care_2.jpg" class="service__image" alt="Garden care">
+                        <div class="service__image-box">
+                            <img src="./assets/images/garden_care_2.jpg" class="service__image" alt="Garden care">
+                        </div>
                         <div class="service_descr">
                             <h3 class="service__name">Garden care</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
                     <div class="service__item">
-                        <img src="./assets/images/planting_3.jpg" class="service__image" alt="Planting">
+                        <div class="service__image-box">
+                            <img src="./assets/images/planting_3.jpg" class="service__image" alt="Planting">
+                        </div>
                         <div class="service_descr">
                             <h3 class="service__name">Planting</h3>
                             <p class="service__text">Lorem Ipsum has been the industry</p>
