feat: implement burger

--- a/plants/index.html
+++ b/plants/index.html
@@ -23,7 +23,7 @@
                 </a>
             </div>
             <nav class="header__navigation">
-                <ul class="nav">
+                <ul class="nav" id="nav">
                     <li><a href="#welcome" class="nav__link nav_checked">Home</a></li>
                     <li><a href="#about-us" class="nav__link">About us</a></li>
                     <li><a href="#service" class="nav__link">Service</a></li>
@@ -31,10 +31,11 @@
                     <li><a href="#contacts" class="nav__link">Contacts</a></li>
                 </ul>
             </nav>
-            <div class="hamburger">
+            <div class="hamburger" id="hamburger">
                 <span class="hamburger__line"></span>
             </div>
         </div>
+        <div class="popup" id="popup"></div>
     </header>
     <main>
         <section class="welcome" id="welcome">
